--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
 
     <div class="nav-container" id="navContainer">
         <!-- 本地文件跳转：用data-href存储链接，便于交换 -->
-        <button class="nav-btn" data-href="page1/page1.html">我的相册</button>
-        <button class="nav-btn" data-href="page2/page2.html">旅行记录</button>
+        <button class="nav-btn" data-href="小手机1/JCY二改【7.4版】（1）.html">JCY Phone</button>
+        <button class="nav-btn" data-href="鲸鱼【0916版】/index.html">Whale Phone</button>
         <button class="nav-btn" data-href="page3/page3.html">日常笔记</button>
         <button class="nav-btn" data-href="page4/page4.html">学习资料</button>
         <button class="nav-btn" data-href="page5/page5.html">项目文档</button>
@@ -319,7 +319,10 @@
         <button class="nav-btn" data-href="page7/page7.html">关于我</button>
        
         <!-- 外部链接跳转 -->
-        <button class="nav-btn" data-href="https://github.com">GitHub</button>
+        <button class="nav-btn" data-href="www.xiaoshouji.art">Star Phone</button>
+        <button class="nav-btn" data-href="https://raven7-7.github.io/Lemuria/">Raven Phone</button>
+        <button class="nav-btn" data-href="https://miaomiao.online/">喵喵机</button>
+        <button class="nav-btn" data-href="https://main.ruaphone.pages.dev">RUA Phone</button>
         <button class="nav-btn" data-href="https://baidu.com">百度</button>
     </div>
 
