--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         <!-- 本地文件跳转：用data-href存储链接，便于交换 -->
         <button class="nav-btn" data-href="小手机1/JCY二改【7.4版】（1）.html">JCY Phone</button>
         <button class="nav-btn" data-href="鲸鱼【0916版】/index.html">Whale Phone</button>
-        <button class="nav-btn" data-href="page3/page3.html">日常笔记</button>
+        <button class="nav-btn" data-href="小手机2/乌鸦电话【0916自存】.html">Raven Phone</button>
         <button class="nav-btn" data-href="page4/page4.html">学习资料</button>
         <button class="nav-btn" data-href="page5/page5.html">项目文档</button>
         <button class="nav-btn" data-href="page6/page6.html">收藏夹</button>
