--- a/index.html
+++ b/index.html
@@ -304,8 +304,8 @@
 </head>
 <body>
     <div class="title-card">
-        <h1 class="editable-title" id="title">Jellyfish导航</h1>
-        <div class="editable-subtitle" id="subtitle">点击即可跳转 | By淡季水母</div>
+        <h1 class="editable-title" id="title">Lee's strongroom</h1>
+        <div class="editable-subtitle" id="subtitle">Destiny awaits your command | By Caleb</div>
     </div>
 
     <div class="nav-container" id="navContainer">
@@ -313,10 +313,7 @@
         <button class="nav-btn" data-href="小手机1/JCY二改【7.4版】（1）.html">JCY Phone</button>
         <button class="nav-btn" data-href="鲸鱼【0916版】/index.html">Whale Phone</button>
         <button class="nav-btn" data-href="小手机2/乌鸦电话【0916自存】.html">Raven Phone</button>
-        <button class="nav-btn" data-href="page4/page4.html">学习资料</button>
-        <button class="nav-btn" data-href="page5/page5.html">项目文档</button>
-        <button class="nav-btn" data-href="page6/page6.html">收藏夹</button>
-        <button class="nav-btn" data-href="page7/page7.html">关于我</button>
+        <button class="nav-btn" data-href="page7/page7.html">waitting...</button>
        
         <!-- 外部链接跳转 -->
         <button class="nav-btn" data-href="www.xiaoshouji.art">Star Phone</button>
