--- a/index.html
+++ b/index.html
@@ -312,14 +312,14 @@
         <!-- 本地文件跳转：用data-href存储链接，便于交换 -->
         <button class="nav-btn" data-href="小手机1/JCY二改【7.4版】（1）.html">JCY Phone</button>
         <button class="nav-btn" data-href="鲸鱼【0916版】/index.html">Whale Phone</button>
-        <button class="nav-btn" data-href="小手机2/乌鸦电话【0916自存】.html">Raven Phone</button>
+        <button class="nav-btn" data-href="小手机2/乌鸦电话【0916自存】.html">Raven Phone自存</button>
         <button class="nav-btn" data-href="page7/page7.html">waitting...</button>
        
         <!-- 外部链接跳转 -->
         <button class="nav-btn" data-href="www.xiaoshouji.art">Star Phone</button>
         <button class="nav-btn" data-href="https://raven7-7.github.io/Lemuria/">Raven Phone</button>
         <button class="nav-btn" data-href="https://miaomiao.online/">喵喵机</button>
-        <button class="nav-btn" data-href="https://main.ruaphone.pages.dev">RUA Phone</button>
+        <button class="nav-btn" data-href="https://ruaphone.com">RUA Phone</button>
         <button class="nav-btn" data-href="https://baidu.com">百度</button>
     </div>
 
