--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
         <button class="nav-btn" data-href="page7/page7.html">waitting...</button>
        
         <!-- 外部链接跳转 -->
-        <button class="nav-btn" data-href="www.xiaoshouji.art">Star Phone</button>
+        <button class="nav-btn" data-href="https://www.xiaoshouji.art">Star Phone</button>
         <button class="nav-btn" data-href="https://raven7-7.github.io/Lemuria/">Raven Phone</button>
         <button class="nav-btn" data-href="https://miaomiao.online/">喵喵机</button>
         <button class="nav-btn" data-href="https://ruaphone.com">RUA Phone</button>
