--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
     <div class="nav-container" id="navContainer">
         <!-- 本地文件跳转：用data-href存储链接，便于交换 -->
         <button class="nav-btn" data-href="JCY【0704】/index.html">JCY Phone</button>
-        <button class="nav-btn" data-href="鲸鱼【0916版】/index.html">Whale Phone</button>
-        <button class="nav-btn" data-href="乌鸦【0916】/index.html">Raven Phone自存</button>
+        <button class="nav-btn" data-href="小手机1/index.html">Whale Phone</button>
+        <button class="nav-btn" data-href="小手机2/index.html">Raven Phone自存</button>
         <button class="nav-btn" data-href="page7/page7.html">waitting...</button>
        
         <!-- 外部链接跳转 -->
