--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@
         <button class="nav-btn" data-href="小手机1/index.html">Whale Phone</button>
         <button class="nav-btn" data-href="小手机2/index.html">Raven Phone自存【0916】</button>
         <button class="nav-btn" data-href="小手机3/index.html">miaomiao Phone自存【0916】</button>
+        <button class="nav-btn" data-href="记事本/index.html">Cava记事本1.3.5beta</button>
         <button class="nav-btn" data-href="page7/page7.html">waitting...</button>
        
         <!-- 外部链接跳转 -->
